--- a/views/partials/headers.hbs
+++ b/views/partials/headers.hbs
@@ -2,4 +2,5 @@
   <h2>{{pageTitle}}</h2>
   <p><a href = "/">Home</a></p>
   <p><a href = "/about">About</a></p>
+  <p><a href = "/project">New project</a></p>
 </header>
